<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyListFragment">

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="?android:attr/actionModeWebSearchDrawable"
        android:ems="10"
        android:hint="@string/search_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:singleLine="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/sec1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/secteur_1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sec2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secteur_2" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sec3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secteur_3" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sec4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secteur_4" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sec5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secteur_5" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sec6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secteur_6" />

        <com.google.android.material.chip.Chip
            android:id="@+id/all_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_company" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/company_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />



</androidx.constraintlayout.widget.ConstraintLayout>